# talawa-ai

./: .clang-format  CMakeLists.txt  Makefile  README.md  clean.sh  run.sh  run_example.sh
benchmarks/: Matrix.benchmark.cpp
examples/: cartpole.example.cpp  corridor.example.cpp  frozenlake.example.cpp  ga.example.cpp  graph_env.example.cpp  main.cpp  mountaincar_dqn.example.cpp  mountaincar_play.example.cpp  random_line_env.example.cpp  reproduce_segfault.example.cpp  sticks.example.cpp  tictactoe.example.cpp  tictactoe_dqn.example.cpp  xor_ga.example.cpp
include/talawa-ai/core/: Activation.hpp  Error.hpp  Initializer.hpp  Matrix.hpp  Optimizer.hpp
include/talawa-ai/env/: Environment.hpp  GameState.hpp  GraphEnvironment.hpp  LineEnvironment.hpp  RLTypes.hpp  TicTacToeEnvironment.hpp  TwoPlayerEnvironment.hpp
include/talawa-ai/neuralnetwork/: Conv2DLayer.hpp  DenseLayer.hpp  Layer.hpp  Loss.hpp  NeuralNetwork.hpp  NeuralNetworkDiagnostic.hpp  Pooling2DLayer.hpp
include/talawa-ai/rl/: Agent.hpp  HumanAgent.hpp  QTable.hpp  RandomAgent.hpp  Scheduler.hpp  SelfPlayTrainer.hpp  Trainer.hpp
include/talawa-ai/utils/: DataLoader.hpp  Dataset.hpp
include/talawa/core/: Activation.hpp  Error.hpp  Initializer.hpp  Matrix.hpp  Optimizer.hpp  Shape.hpp
include/talawa/env/: CartPole.hpp  Corridor.hpp  F1.hpp  FrozenLake.hpp  MountainCar.hpp  SticksGameEnvironment.hpp  TicTacToe.hpp  types.hpp
include/talawa/env/interfaces/: IEnvironment.hpp  Snapshotable.hpp
include/talawa/evo/: Game.hpp  Genome.hpp  NeuralGenome.hpp  Population.hpp
include/talawa/evo/interfaces/: ICrossoverStrategy.hpp  IFitnessStrategy.hpp  IGenomeGeneratorStrategy.hpp  IMutationSrategy.hpp  ISelectionStrategy.hpp
include/talawa/evo/strategies/fitness/: INeuralGenomeFitness.hpp
include/talawa/neuralnetwork/: Conv2DLayer.hpp  DenseLayer.hpp  Layer.hpp  Loss.hpp  NeuralNetwork.hpp  NeuralNetworkDiagnostic.hpp  Pooling2DLayer.hpp
include/talawa/rl/: Arena.hpp  DQNAgent.hpp  HumanAgent.hpp  IAgent.hpp  QTable.hpp  RandomAgent.hpp  ReplayBuffer.hpp
include/talawa/utils/: DataLoader.hpp  Dataset.hpp  ISerializable.hpp  Timer.hpp
include/talawa/visuals/: IRenderer.hpp  Visualizer.hpp
src/core/: Activation.cpp  Initializer.cpp  Matrix.cpp  Optimizer.cpp
src/env/: CartPole.cpp  Corridor.cpp  F1.cpp  FrozenLake.cpp  GraphEnvironment.cpp  LineEnvironment.cpp  MountainCar.cpp  TicTacToe.cpp
src/neuralnetwork/: Conv2DLayer.cpp  DenseLayer.cpp  Loss.cpp  NeuralNetwork.cpp  Pooling2DLayer.cpp
src/rl/: DQNAgent.cpp  QTable.cpp  ReplayBuffer.cpp  SelfPlayTrainer.cpp  Trainer.cpp
src/utils/: DataLoader.cpp  Dataset.cpp
tests/: cnn_mnist.test.cpp  dqn.test.cpp  matrix.test.cpp  matrix_equality.test.cpp  mnist.test.cpp  net.test.cpp  save_load.test.cpp
